--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-GOOGLE_CLIENT_ID = '1051582446864-i91n99ge3t9npc1pk9jd1g78urkko0h0.apps.googleusercontent.com'
-GOOGLE_CLIENT_SECRET = 'LOyqeAHx2zOjFI3Lx17AQp15'
+GOOGLE_CLIENT_ID = ''
+GOOGLE_CLIENT_SECRET = ''
 MONGO_URI = 'mongodb://localhost/emailsurvey'
 COOKIE_KEY = ''
 STRIPE_PUBLISHABLE_KEY = ''
 STRIPE_SECRET_KEY = ''
-SEND_GRID_KEY = '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'
+SEND_GRID_KEY = ''
 REDIRECT_DOMAIN = ''
